--- a/Eventos/index.html
+++ b/Eventos/index.html
@@ -9,36 +9,18 @@
 </head>
 
 <body>
-    <main>
-      <h1> Tu consulta </h1>
-      <h3> ¡Buen día! Ingrese su nombre para comenzar </h3>
-      <input id="name" type="text" placeholder="Nombre">
-      <input id="surname" type="text" placeholder="Apellido">
+    <h1> Tu consulta </h1>
+    <h3> ¡Buen día! Ingrese su nombre para comenzar </h3>
+    <input id="name" type="text" placeholder="Nombre">
+    <input id="surname" type="text" placeholder="Apellido">
+    <main id="consulta">
         <section>
             <h3> ¿Qué estás buscando? </h3>
             <button id="btnAuto"> Auto </button>
             <button id="btnCamion"> Camión </button>
-        </section>
-        <section id="sectionAuto">
-            <h3> Especificaciones autos</h3>
-            <input id="marca" type="text" placeholder="Marca">
-            <input id="modelo" type="text" placeholder="Modelo">
-            <input id="anio" type="number" placeholder="Año">
-        </section>
-        <section id="sectionCamion">
-            <h3> Especificaciones camiones</h3>
-            <input id="marca" type="text" placeholder="Marca">
-            <input id="modelo" type="text" placeholder="Modelo">
-            <input id="anio" type="number" placeholder="Año">
-            <input id="ejes" type="number" placeholder="Ejes">
-        </section>
-        <section id="otro">
-            <h3> ¿Buscas otra cosa? </h3>
-            <input id="otro" type="text">
-            <input id="detalles" type="text" placeholder="Más detalles (opcional)">
+            <button id="btnOtro"> Otro </button>
         </section>
     </main>
-    <script src="main.js"></script>
     <script src="eventos.js"></script>
 </body>
 
